# DefyCommunications

./: CMakeLists.txt
docs/: Communication_flow.puml  Communications_protocol.puml  docs.md
src/: Callback.h  Communications.h  Communications_protocol.h  Communications_protocol_rf.cpp  Communications_protocol_rf.h  KeyScanner_communications_protocol.h
src/device/defyN2/: CommunicationsN2.cpp  CommunicationsN2.cpp.orig  Communications_rf_pipe.cpp  Communications_side.cpp  Communications_side.h
src/device/defyN2/com_models/: Communication_model.cpp  Communication_model.h  Communication_model_ble.cpp  Communication_model_ble.h  Communication_model_rf.cpp  Communication_model_rf.h  Communication_model_wired.cpp  Communication_model_wired.h
src/device/defyWN/: CommunicationsWN.cpp
src/device/keyScanner/: CommunicationsKS.cpp  CommunicationsKS.cpp.orig
src/device/neuron/common/: Communication_model.cpp  Communication_model.h  Communications_side.cpp  Communications_side.h  Communications_types.h
src/device/neuron/defyN2/: CommunicationsN2.cpp  CommunicationsN2_side.cpp  CommunicationsN2_side.h  Communications_rf_pipe.h
src/device/neuron/defyN2/com_models/: Communication_model_ble.h  Communication_model_rf.cpp  Communication_model_rf.h  Communication_model_wired.cpp  (+1 more)
src/device/neuron/defyWN/: CommunicationsWN.cpp  CommunicationsWN_side.cpp  CommunicationsWN_side.h
src/device/neuron/next/: CommunicationsN2.cpp  CommunicationsN2_side.cpp  CommunicationsN2_side.h
src/device/neuron/sonsei/: CommunicationsN2.cpp  CommunicationsN2_side.cpp
(+2 files in other folders)
